--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -29,7 +29,9 @@
         "grass": "assets/textures/grass_ground_d.jpg",
         "wood": "assets/textures/wood.jpg",
         "glass": "assets/textures/glass-panels.png",
-        "monkey": "assets/textures/monkey.png"
+        "monkey": "assets/textures/monkey.png",
+        "red": "assets/textures/red.png",
+        "green": "assets/textures/green.jpg"
       },
       "meshes": {
         "cube": "assets/models/cube.obj",
@@ -123,12 +125,42 @@
           "tint": [1, 1, 1, 1],
           "texture": "moon",
           "sampler": "default"
-        }
+        },
+         "red": {
+          "type": "textured",
+          "shader": "textured",
+          "pipelineState": {
+            "faceCulling": {
+              "enabled": false
+            },
+            "depthTesting": {
+              "enabled": true
+            }
+          },
+          "tint": [1, 1, 1, 1],
+          "texture": "red",
+          "sampler": "default"
+        },
+        "green": {
+         "type": "textured",
+         "shader": "textured",
+         "pipelineState": {
+           "faceCulling": {
+             "enabled": false
+           },
+           "depthTesting": {
+             "enabled": true
+           }
+         },
+         "tint": [1, 1, 1, 1],
+         "texture": "green",
+         "sampler": "default"
+       }
       }
     },
     "world": [
       {
-        "position": [0, 0, 10],
+        "position": [0, 5, 10],
         "components": [
           {
             "type": "Camera"
@@ -139,119 +171,83 @@
         ],
         "children": [
           {
-            "position": [1, -1, -1],
-            "rotation": [45, 45, 0],
-            "scale": [0.1, 0.1, 1.0],
+            "position": [0, -5, -10],
+            "rotation": [0, 45, 0],
+            "scale": [1, 1, 1],
             "components": [
               {
                 "type": "Mesh Renderer",
                 "mesh": "cube",
-                "material": "metal"
+                "material": "red"
+              }
+            ],
+            "children": [
+              {
+                "position": [0, 0, 0],
+                "rotation": [0, 0, 0],
+                "scale": [1, 1, 1],
+                "components":[
+                  {
+                    "type": "Rigid Body",
+                    "bodyType": "cube",
+                    "center": [0, 0, 0],
+                    "width": 2.1,
+                    "height": 2.1,
+                    "length": 2.1,
+                    "static": true,
+                    "tag": "car"
+                  }
+                ]
               }
             ]
           }
         ]
       },
       {
-        "rotation": [-45, 0, 0],
+        "position": [0, 0, -10],
+        "rotation": [0, 0, 0],
+        "scale": [1, 1, 1],
         "components": [
           {
             "type": "Mesh Renderer",
-            "mesh": "monkey",
-            "material": "monkey"
-          },
+            "mesh": "sphere",
+            "material": "green"
+          },    
           {
-            "type": "Movement",
-            "linearVelocity": [0, 0.1, 0],
-            "angularVelocity": [0, 45, 0]
+            "type": "Movement"
+          }
+        ],
+        
+        "children": [
+          {
+            "position": [0, 0, 0],
+            "rotation": [0, 0, 0],
+            "scale": [1, 1, 1],
+            "components":[
+              {
+                "type": "Rigid Body",
+                "bodyType": "cube",
+                "center": [0, 0, 0],
+                "width": 2.2,
+                "height": 2.2,
+                "length": 2.2,
+                "static": false,
+                "tag": "ball"
+              }
+            ]
           }
         ]
+
       },
       {
         "position": [0, -1, 0],
         "rotation": [-90, 0, 0],
-        "scale": [10, 10, 1],
+        "scale": [100, 100, 1],
         "components": [
           {
             "type": "Mesh Renderer",
             "mesh": "plane",
             "material": "grass"
-          }
-        ]
-      },
-      {
-        "position": [0, 1, 2],
-        "rotation": [0, 0, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [0, 1, -2],
-        "rotation": [0, 0, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [2, 1, 0],
-        "rotation": [0, 90, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [-2, 1, 0],
-        "rotation": [0, 90, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [0, 3, 0],
-        "rotation": [90, 0, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [0, 10, 0],
-        "rotation": [45, 45, 0],
-        "scale": [5, 5, 5],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "sphere",
-            "material": "moon"
-          },
-          {
-            "type": "Movement",
-            "angularVelocity": [0, 90, 0]
           }
         ]
       }
