--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -188,6 +188,11 @@
                 "scale": [1, 1, 1],
                 "components":[
                   {
+                    "type": "Mesh Renderer",
+                    "mesh": "cube",
+                    "material": "glass"
+                  },
+                  {
                     "type": "Rigid Body",
                     "bodyType": "cube",
                     "center": [0, 0, 0],
@@ -239,6 +244,8 @@
         ]
 
       },
+
+      // GROUND
       {
         "position": [0, -1, 0],
         "rotation": [-90, 0, 0],
@@ -250,6 +257,147 @@
             "material": "grass"
           }
         ]
+      },
+
+      // WALLS 
+      // LEFT WALL
+      {
+        "position": [-30, 0, 0],
+        "rotation": [0, 90, 0],
+        "scale": [100, 100, 1],
+        "components": [
+          {
+            "type": "Mesh Renderer",
+            "mesh": "plane",
+            "material": "glass"
+          }
+        ],
+        "children": [
+          {
+            "position": [0, 0, 0],
+            "rotation": [0, 0, 0],
+            "scale": [1, 1, 1],
+            "components":[
+              {
+                "type": "Rigid Body",
+                "bodyType": "cube",
+                "center": [0, 0, 0],
+                "width": 1,
+                "height": 1,
+                "length": 1,
+                "static": false,
+                "tag": "wall",
+                "wallType": "left"
+              }
+            ]
+          }
+        ]
+
+      },
+
+      // RIGHT WALL      
+      {
+        "position": [30, 0, 0],
+        "rotation": [0, 90, 0],
+        "scale": [100, 100, 1],
+        "components": [
+          {
+            "type": "Mesh Renderer",
+            "mesh": "plane",
+            "material": "glass"
+          }
+        ],
+        "children": [
+          {
+            "position": [0, 0, 0],
+            "rotation": [0, 0, 0],
+            "scale": [1, 1, 1],
+            "components":[
+              {
+                "type": "Rigid Body",
+                "bodyType": "cube",
+                "center": [0, 0, 0],
+                "width": 1,
+                "height": 1,
+                "length": 1,
+                "static": false,
+                "tag": "wall",
+                "wallType": "right"
+              }
+            ]
+          }
+        ]
+
+      },
+
+      // TOP WALL  
+      {
+        "position": [0, 30, 0],
+        "rotation": [90, 0, 0],
+        "scale": [100, 1, 100],
+        "components": [
+          {
+            "type": "Mesh Renderer",
+            "mesh": "plane",
+            "material": "glass"
+          }
+        ],
+        "children": [
+          {
+            "position": [0, 0, 0],
+            "rotation": [0, 0, 0],
+            "scale": [5, 1, 1],
+            "components":[
+              {
+                "type": "Rigid Body",
+                "bodyType": "cube",
+                "center": [0, 0, 0],
+                "width": 10,
+                "height": 10,
+                "length": 10,
+                "static": false,
+                "tag": "wall",
+                "wallType": "top"
+              }
+            ]
+          }
+        ]
+
+      },
+
+      // Front WALL  
+      {
+        "position": [0, 30, 0],
+        "rotation": [0, 90, 0],
+        "scale": [100, 1, 100],
+        "components": [
+          {
+            "type": "Mesh Renderer",
+            "mesh": "plane",
+            "material": "glass"
+          }
+        ],
+        "children": [
+          {
+            "position": [0, 0, 0],
+            "rotation": [0, 0, 0],
+            "scale": [5, 1, 1],
+            "components":[
+              {
+                "type": "Rigid Body",
+                "bodyType": "cube",
+                "center": [0, 0, 0],
+                "width": 10,
+                "height": 10,
+                "length": 10,
+                "static": false,
+                "tag": "wall",
+                "wallType": "left"
+              }
+            ]
+          }
+        ]
+
       }
     ]
   }
